[package]
name = "byo_burger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
env_logger = "0.10.0"
dotenvy = "0.15.6"
tokio = { version = "1.12.0", features = ["full"] }
reqwest = { version = "0.11.13", features = ["json"] }
serde_json = "1"
derive_more = "0.99.17"
serde = { version = "1.0", features = ["derive"] }